--- a/Index.html
+++ b/Index.html
@@ -14,8 +14,11 @@
 
     <div id="pokedex">
         <h1 id="pokemonName"></h1>
-        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/4.png" alt="">
     </div>
+    <div class="info-container">
+        <img id="pokemonImage">
+    </div>
+
 </body>
 
 </html>
